// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDiscoveredHostLink /> renders a link to add discovered host 1`] = `
<Popover
  appendTo={[Function]}
  aria-label=""
  bodyContent={
    <React.Fragment>
      <p>
        This host has been discovered on the network but has not been added to the cluster.
      </p>
      <p>
        <a
          onClick={[Function]}
        >
          Add Host
        </a>
      </p>
    </React.Fragment>
  }
  className={null}
  closeBtnAriaLabel="Close"
  enableFlip={true}
  footerContent={null}
  headerContent={
    <div>
      Discovered Host
    </div>
  }
  hideOnOutsideClick={true}
  isVisible={false}
  maxWidth="calc(1.5rem + 18.75rem)"
  onHidden={[Function]}
  onHide={[Function]}
  onMount={[Function]}
  onShow={[Function]}
  onShown={[Function]}
  position="right"
  shouldClose={[Function]}
  size="regular"
  zIndex={9999}
>
  <a
    onClick={[Function]}
  >
    <Status
      icon="add-circle-o"
      iconType={null}
    >
      Discovered
    </Status>
  </a>
</Popover>
`;

exports[`<GenericError /> renders an error message 1`] = `
<Status
  icon="error-circle-o"
  iconType={null}
>
  Registration Error
</Status>
`;

exports[`<GenericError /> with details renders an error message with details 1`] = `
<PopoverStatus
  header={
    <div>
      Registration Error
    </div>
  }
  icon="error-circle-o"
  iconType={null}
>
  <div>
    some error details
  </div>
</PopoverStatus>
`;

exports[`<GenericProgress /> renders a progress message 1`] = `
<Status
  icon="in-progress"
  iconType={null}
>
  Provisioning
</Status>
`;

exports[`<GenericStatus /> renders a generic status string 1`] = `"Provisioned"`;

exports[`<GenericSuccess /> renders a success message 1`] = `
<Status
  icon="ok"
  iconType={null}
>
  Provisioned
</Status>
`;

exports[`<ValidationError /> renders a validation error 1`] = `
<PopoverStatus
  header={
    <div>
      Validation Error(s)
    </div>
  }
  icon="error-circle-o"
  iconType={null}
>
  <div>
    some validation errors
  </div>
</PopoverStatus>
`;
